--- a/symposium.tex
+++ b/symposium.tex
@@ -398,7 +398,8 @@ These results suggest that the proposed method is effective in numerically appro
 \label{conclusions}
 
 This paper presented both an idealized procedure and a numerical approximation procedure for solving continuous games of simultaneous decision that can be easily adapted to any number of players, objectives, and solutions.
-The numerical approximation procedure was shown to be effective in finding a finite number of PSNEs for FlipIt with IE, a game with one single-objective player, one multi-objective player, and three continuous decision variables in total.
+The numerical approximation procedure was designed to be very simple, meaning that many of the optimizations that could be performed to improve its performance were not implemented at this stage.
+However, even this basic implementation was shown to be effective in finding a finite number of PSNEs for FlipIt with IE, a game with one single-objective player, one multi-objective player, and three continuous decision variables in total.
 
 The approximations found exhibited a good distribution and a low noise level despite the reduced number of actual estimations.
 With this method, the analyst can obtain a visual representation of the game's equilibrium tendencies, even for cases where analytical solutions are unavailable.
@@ -406,7 +407,9 @@ The proposed method offers an approach that may be intuitive for researchers in 
 It should also be intuitive for researchers in the field of game theory, as the convergence criterion essentially generalizes the game-theoretical concept of ``all players playing best responses simultaneously''.
 We hope that the framework provided here can guide the development of new, more efficient methods to solve game-theoretical models of simultaneous decision and continuous decision spaces.
 
-As future works, we plan to increase the method's computational efficiency by enhancing the intersection-computing algorithm, allowing for a finer grid, faster convergence, and, hopefully, a larger and less noisy set of estimations.
+As future works, we plan to increase the method's computational efficiency by enhancing the intersection-computing algorithm and by dynamically allocating resources to the EAs (e.g., population size, offspring size, number of generations) based on criteria such as convergence and distance to opponent populations.
+We also plan to fully investigate the effects of increasing the grid resolution, especially in a dynamic manner as the nested EAs start to converge and therefore to reveal the regions of interest in the decision space.
+These improvements may allow for a finer grid, faster convergence, larger population sizes and, hopefully, a larger and more accurate set of estimations.
 
 \bibliographystyle{plain}
 \bibliography{symposium}
