--- a/symposium.tex
+++ b/symposium.tex
@@ -34,7 +34,7 @@
 \beginheader
 
 \jtitle%
-{An Evolutionary-Computing Based Framework for Solving Simultaneous Continuous Games}
+{An Evolutionary-Computing Based Framework for Approaching Simultaneous Continuous Games with Infinite Solutions}
 
 \begin{authors}
 \name{1}{Rui Leite},
@@ -53,7 +53,7 @@
 \end{center}
 ]
 
-\etitle{An Evolutionary-Computing Based Framework for Solving Simultaneous Continuous Games}
+\etitle{An Evolutionary-Computing Based Framework for Approaching Simultaneous Continuous Games with Infinite Solutions}
 
 \ename{1}{Rui Leite(23hs201j@shinshu-u.ac.jp)}
 \ename{1}{Hernan Aguirre(ahernan@shinshu-u.ac.jp)}
